...

            <TextView
                android:id="@+id/courseLectureTitleNewSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

                <EditText
                    android:id="@+id/labCRNField"
                    android:layout_width="@dimen/activity_insert_default_width"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/labCodeField"
                    android:layout_width="@dimen/activity_insert_default_width"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/labInstructorField"
                    android:layout_width="@dimen/activity_insert_default_width"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/labCampusField"
                    android:layout_width="@dimen/activity_insert_default_width"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/labLocationField"
                    android:layout_width="@dimen/activity_insert_default_width"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/labStartDateField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/labEndDateField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/labTimeMonday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/labMondayField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/labMondayEndField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/addNewLabButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/finishButtonLab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
