...
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top">

            <TextView
                android:id="@+id/courseTitleNewSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
        </FrameLayout>

...
                    android:text="@string/section_class_times"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintStart_toStartOf="@id/sectionDateRange"
                    app:layout_constraintTop_toBottomOf="@id/sectionDateRange" />

                <EditText
                    android:id="@+id/sectionCRNField"
                    android:layout_width="@dimen/activity_insert_default_width"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_hoz_distance_margin"
                    android:hint="@string/section_crn_hint"
                    android:inputType="number"
                    app:layout_constraintBaseline_toBaselineOf="@+id/sectionCRN"
                    app:layout_constraintStart_toStartOf="@id/sectionCRN" />

                <EditText
                    android:id="@+id/sectionCodeField"
                    android:layout_width="@dimen/activity_insert_default_width"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_hoz_distance_margin"
                    android:ems="10"
                    android:hint="@string/section_code_hint"
                    android:inputType="text"
                    app:layout_constraintBaseline_toBaselineOf="@+id/sectionCode"
                    app:layout_constraintStart_toStartOf="@id/sectionCode" />

                <EditText
                    android:id="@+id/sectionInstructorField"
                    android:layout_width="@dimen/activity_insert_default_width"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_hoz_distance_margin"
                    android:ems="10"
                    android:hint="@string/section_instructor_hint"
                    android:inputType="textPersonName"
                    app:layout_constraintBaseline_toBaselineOf="@id/sectionInstructor"
                    app:layout_constraintStart_toStartOf="@id/sectionInstructor" />

                <EditText
                    android:id="@+id/sectionCampusField"
                    android:layout_width="@dimen/activity_insert_default_width"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_hoz_distance_margin"
                    android:ems="10"
                    android:hint="@string/section_campus_hint"
                    android:inputType="text"
                    app:layout_constraintBaseline_toBaselineOf="@id/sectionCampus"
                    app:layout_constraintStart_toStartOf="@id/sectionCampus" />

                <EditText
                    android:id="@+id/sectionLocationFIeld"
                    android:layout_width="@dimen/activity_insert_default_width"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_hoz_distance_margin"
                    android:ems="10"
                    android:hint="@string/section_location_hint"
                    android:inputType="text"
                    app:layout_constraintBaseline_toBaselineOf="@id/sectionLocation"
                    app:layout_constraintStart_toStartOf="@id/sectionLocation" />

                <EditText
                    android:id="@+id/sectionStartDateField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_hoz_distance_margin"
                    android:ems="10"
                    android:hint="@string/section_date_hint"
                    android:inputType="text"
                    app:layout_constraintBaseline_toBaselineOf="@id/sectionDateRange"
                    app:layout_constraintStart_toStartOf="@id/sectionDateRange" />

                <EditText
                    android:id="@+id/sectionEndDateField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:ems="10"
                    android:hint="@string/section_date_hint"
                    android:inputType="textPersonName"
...
                    android:text="to"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintBaseline_toBaselineOf="@id/sectionDateRange"
                    app:layout_constraintStart_toEndOf="@id/sectionStartDateField" />

                <TextView
                    android:id="@+id/classTimeMonday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_hoz_distance_margin"
                    android:ems="5"
                    android:text="@string/section_class_monday"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintBaseline_toBaselineOf="@id/sectionClassTimes"
                    app:layout_constraintStart_toStartOf="@id/sectionClassTimes" />

                <EditText
                    android:id="@+id/sectionMondayField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_hoz_time_margin"
                    android:ems="6"
                    android:hint="@string/section_time_hint"
                    android:inputType="text"
...
                    android:text="to"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintBaseline_toBaselineOf="@id/sectionMondayField"
                    app:layout_constraintStart_toEndOf="@id/sectionMondayField" />

                <EditText
                    android:id="@+id/sectionMondayEndField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/to_margin"
                    android:ems="6"
                    android:hint="@string/section_time_hint"
                    android:inputType="text"
...
                    android:text="@string/create_section"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/sectionClassTimes"
                    app:layout_constraintTop_toBottomOf="@id/classTimeFriday" />

                <Button
                    android:id="@+id/addLabButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_top_bottom_margin"
                    android:clickable="true"
                    android:ems="9"
                    android:foregroundGravity="left"
...
